# wp-monitor

./: .gitignore  .run.gxl  Cargo.toml  Dockerfile  GX_ADM_GUIDE.md  README.en.md  README.md  docker-compose.yml
.github/workflows/: build-and-test.yml  dependabot-branch-filter.yml  deploy-wp-monitor.yml  release.yml
_gal/: adm.gxl  work.gxl
_gal/mods/: rust.gxl
config/: app.toml
dev-ops/docker/: .env  .env.example  README.md  docker-compose.yml  start.sh
doc/: BEAUTIFY.md  WP-MONITOR发布说明-简版.md  WP-MONITOR发布说明.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/monitor/: ScopeTrendPanel.tsx  TimeSeriesChart.tsx  chartPalette.ts  flowHelpers.ts
frontend/src/pages/: index.tsx
frontend/src/pages/wp-monitor/: index.css  index.tsx
frontend/src/services/: monitor.ts
frontend/src/types/: monitor.ts
install/docker/: .env.example  README.md  docker-compose-alpha.yml  docker-compose-beta.yml  docker-compose-main.yml  docker-compose.yml  start.sh
install/docker/example/: run.sh  wpgen-keep-running.sh
install/docker/example/conf/: wparse.toml  wpgen.toml
src/: main.rs
src/application/: layer_service.rs  mod.rs
src/domain/: model.rs
src/infrastructure/: mod.rs  vlog_repository.rs  vm_repository.rs
src/interfaces/: mod.rs
src/interfaces/http/: handlers.rs  routes.rs  static_assets.rs
src/interfaces/vlog/: handlers.rs  routers.rs
src/interfaces/vm/: handlers.rs  mod.rs  routes.rs
src/shared/: api.rs  config.rs  hash.rs  logging.rs  mod.rs
(+16 files in other folders)
