[package]
name = "wp_monitor"
version = "0.3.9"
edition = "2024"

[dependencies]
actix-web = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
toml = "0.8"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rust-embed = { version = "8.0", features = ["include-exclude"] }
mime_guess = "2.0"
